--- a/src/AnakinApps/ApplicationManifestCreator/ApplicationManifestCreator.csproj
+++ b/src/AnakinApps/ApplicationManifestCreator/ApplicationManifestCreator.csproj
@@ -19,6 +19,11 @@
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="7.0.0" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.0" />
 		<PackageReference Include="TestableIO.System.IO.Abstractions.Wrappers" Version="19.2.4" />
+		<PackageReference Include="Validation" Version="2.5.51" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <ProjectReference Include="..\..\Updater\AppUpdaterFramework.Manifest\AppUpdaterFramework.Manifest.csproj" />
 	</ItemGroup>
 
 </Project>
