--- a/src/Updater/ExternalUpdater/ExternalUpdater.csproj
+++ b/src/Updater/ExternalUpdater/ExternalUpdater.csproj
@@ -30,6 +30,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <ProjectReference Include="..\AppUpdaterFramework.Core\AppUpdaterFramework.Core.csproj" />
 	  <ProjectReference Include="..\ExternalUpdater.CLI\ExternalUpdater.CLI.csproj" />
 	</ItemGroup>
 
