--- a/src/Updater/AppUpdaterFramework.Core/AppUpdaterFramework.Core.csproj
+++ b/src/Updater/AppUpdaterFramework.Core/AppUpdaterFramework.Core.csproj
@@ -14,6 +14,7 @@
 		<PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
 		<PackageReference Include="AnakinRaW.CommonUtilities" Version="5.0.1" />
 		<PackageReference Include="Semver" Version="2.3.0" />
+		<PackageReference Include="Mono.Cecil" Version="0.11.4" PrivateAssets="build;compile" />
 	</ItemGroup>
 
 </Project>
