--- a/src/AnakinApps/Directory.Build.props
+++ b/src/AnakinApps/Directory.Build.props
@@ -1,11 +1,20 @@
 <Project>
 
-	<Import Project="../../Directory.Build.props" />
-
 	<PropertyGroup>
+		<Copyright>Copyright © AnakinRaW 2019-2023</Copyright>
+		<Authors>AnakinRaW</Authors>
+		<Company>Republic at War Modding Team</Company>
 		<Product>AnakinRaW Application Framework</Product>
 		<PackageLicenseExpression>MIT</PackageLicenseExpression>
 		<PublishRepositoryUrl>true</PublishRepositoryUrl>
+	</PropertyGroup>
+
+	<PropertyGroup>
+		<LangVersion>latest</LangVersion>
+		<ImplicitUsings>disable</ImplicitUsings>
+		<Nullable>enable</Nullable>
+		<EnableNETAnalyzers>True</EnableNETAnalyzers>
+		<AnalysisLevel>latest</AnalysisLevel>
 	</PropertyGroup>
 
 </Project>
