--- a/src/CommonUtilities/CommonUtilities.WPF.ApplicationFramework/CommonUtilities.WPF.ApplicationFramework.csproj
+++ b/src/CommonUtilities/CommonUtilities.WPF.ApplicationFramework/CommonUtilities.WPF.ApplicationFramework.csproj
@@ -7,7 +7,7 @@
 	</PropertyGroup>
 
 	<PropertyGroup>
-		<TargetFrameworks>net6.0-windows;net48</TargetFrameworks>
+		<TargetFrameworks>net48;net6.0-windows</TargetFrameworks>
 		<RootNamespace>AnakinRaW.CommonUtilities.Wpf.ApplicationFramework</RootNamespace>
 		<AssemblyName>AnakinRaW.CommonUtilities.WPF.ApplicationFramework</AssemblyName>
 		<UseWPF>true</UseWPF>
