--- a/src/CommonUtilities/CommonUtilities.Windows/CommonUtilities.Windows.csproj
+++ b/src/CommonUtilities/CommonUtilities.Windows/CommonUtilities.Windows.csproj
@@ -7,7 +7,7 @@
 	</PropertyGroup>
 
 	<PropertyGroup>
-		<TargetFrameworks>net6.0-windows;net48</TargetFrameworks>
+		<TargetFrameworks>net48;net6.0-windows</TargetFrameworks>
 		<RootNamespace>AnakinRaW.CommonUtilities.Windows</RootNamespace>
 		<AssemblyName>AnakinRaW.CommonUtilities.Windows</AssemblyName>
 		<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
