--- a/src/AnakinApps/ApplicationBase/ApplicationBase.csproj
+++ b/src/AnakinApps/ApplicationBase/ApplicationBase.csproj
@@ -26,6 +26,11 @@
 		<PackageReference Include="AnakinRaW.CommonUtilities.FileSystem.Windows" Version="5.0.1" />
 		<PackageReference Include="AnakinRaW.CommonUtilities.Registry.Windows" Version="5.0.1" />
 		<PackageReference Include="Semver" Version="2.3.0" />
+
+	</ItemGroup>
+
+	<ItemGroup Condition="$(TargetFramework) == 'net48'">
+		<PackageReference Include="Vanara.PInvoke.Kernel32" Version="3.4.13" />
 	</ItemGroup>
 
 	<ItemGroup>
