--- a/src/Updater/AppUpdaterFramework/AppUpdaterFramework.csproj
+++ b/src/Updater/AppUpdaterFramework/AppUpdaterFramework.csproj
@@ -5,7 +5,7 @@
 	</PropertyGroup>
 
 	<PropertyGroup>
-		<TargetFrameworks>net48;net6.0-windows</TargetFrameworks>
+		<TargetFrameworks>net48;net6.0</TargetFrameworks>
 		<RootNamespace>AnakinRaW.AppUpdaterFramework</RootNamespace>
 		<AssemblyName>AnakinRaW.AppUpdaterFramework</AssemblyName>
 	</PropertyGroup>
@@ -21,9 +21,7 @@
 		<PackageReference Include="AnakinRaW.CommonUtilities.FileSystem" Version="5.0.1" />
 		<PackageReference Include="AnakinRaW.CommonUtilities.SimplePipeline" Version="5.0.1" />
 		<PackageReference Include="Validation" Version="2.5.51" PrivateAssets="build;compile" />
-		<PackageReference Include="Vanara.PInvoke.NetListMgr" Version="3.4.13" PrivateAssets="build;compile" />
-		<PackageReference Include="Vanara.PInvoke.RstrtMgr" Version="3.4.13" />
-		<PackageReference Include="Vanara.PInvoke.Security" Version="3.4.13" />
+		<PackageReference Include="Vanara.PInvoke.RstrtMgr" Version="3.4.13" PrivateAssets="build;compile"/>
 	</ItemGroup>
 
 	<ItemGroup Condition=" '$(Configuration)' == 'Debug' ">
