--- a/src/Updater/AppUpdaterFramework/AppUpdaterFramework.csproj
+++ b/src/Updater/AppUpdaterFramework/AppUpdaterFramework.csproj
@@ -5,7 +5,7 @@
 	</PropertyGroup>
 
 	<PropertyGroup>
-		<TargetFrameworks>net48;net6.0</TargetFrameworks>
+		<TargetFrameworks>netstandard2.0;netstandard2.1</TargetFrameworks>
 		<RootNamespace>AnakinRaW.AppUpdaterFramework</RootNamespace>
 		<AssemblyName>AnakinRaW.AppUpdaterFramework</AssemblyName>
 	</PropertyGroup>
@@ -15,13 +15,13 @@
 		<PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.0" />
 		<PackageReference Include="Semver" Version="2.3.0" />
-		<PackageReference Include="AnakinRaW.CommonUtilities" Version="5.0.1" />
-		<PackageReference Include="AnakinRaW.CommonUtilities.Registry" Version="5.0.1" />
-		<PackageReference Include="AnakinRaW.CommonUtilities.DownloadManager" Version="5.0.1" />
-		<PackageReference Include="AnakinRaW.CommonUtilities.FileSystem" Version="5.0.1" />
-		<PackageReference Include="AnakinRaW.CommonUtilities.SimplePipeline" Version="5.0.1" />
+		<PackageReference Include="AnakinRaW.CommonUtilities" Version="6.0.1" />
+		<PackageReference Include="AnakinRaW.CommonUtilities.Registry" Version="6.0.1" />
+		<PackageReference Include="AnakinRaW.CommonUtilities.DownloadManager" Version="6.0.1" />
+		<PackageReference Include="AnakinRaW.CommonUtilities.FileSystem" Version="6.0.1" />
+		<PackageReference Include="AnakinRaW.CommonUtilities.SimplePipeline" Version="6.0.1" />
 		<PackageReference Include="Validation" Version="2.5.51" PrivateAssets="build;compile" />
-		<PackageReference Include="Vanara.PInvoke.RstrtMgr" Version="3.4.13" PrivateAssets="build;compile"/>
+		<PackageReference Include="Vanara.PInvoke.RstrtMgr" Version="3.4.13" PrivateAssets="build;compile" />
 	</ItemGroup>
 
 	<ItemGroup Condition=" '$(Configuration)' == 'Debug' ">
@@ -29,8 +29,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <ProjectReference Include="..\..\CommonUtilities\CommonUtilities.Windows\CommonUtilities.Windows.csproj" />
-	  <ProjectReference Include="..\AppUpdaterFramework.Core\AppUpdaterFramework.Core.csproj" />
+		<ProjectReference Include="..\AppUpdaterFramework.Core\AppUpdaterFramework.Core.csproj" />
 	</ItemGroup>
 
 	<PropertyGroup>
