--- a/src/Updater/AppUpdaterFramework.Manifest/AppUpdaterFramework.Manifest.csproj
+++ b/src/Updater/AppUpdaterFramework.Manifest/AppUpdaterFramework.Manifest.csproj
@@ -5,7 +5,7 @@
 	</PropertyGroup>
 
 	<PropertyGroup>
-		<TargetFrameworks>net48;net6.0</TargetFrameworks>
+		<TargetFrameworks>netstandard2.0</TargetFrameworks>
 		<RootNamespace>AnakinRaW.AppUpdaterFramework</RootNamespace>
 		<AssemblyName>AnakinRaW.AppUpdaterFramework.Manifest</AssemblyName>
 	</PropertyGroup>
