--- a/src/Updater/ExternalUpdater.CLI/ExternalUpdater.CLI.csproj
+++ b/src/Updater/ExternalUpdater.CLI/ExternalUpdater.CLI.csproj
@@ -5,23 +5,20 @@
 	</PropertyGroup>
 
 	<PropertyGroup>
-		<TargetFrameworks>net48;net6.0-windows</TargetFrameworks>
+		<TargetFrameworks>netstandard2.0;netstandard2.1</TargetFrameworks>
 		<RootNamespace>AnakinRaW.ExternalUpdater</RootNamespace>
 		<AssemblyName>AnakinRaW.ExternalUpdater.CLI</AssemblyName>
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="AnakinRaW.CommonUtilities.FileSystem" Version="5.0.1" />
+		<PackageReference Include="AnakinRaW.CommonUtilities.FileSystem" Version="6.0.1" />
+		<PackageReference Include="AnakinRaW.CommonUtilities" Version="6.0.1" />
 		<PackageReference Include="CommandLineParser" Version="2.9.1" />
 		<PackageReference Include="Semver" Version="2.3.0" />
 		<PackageReference Include="TestableIO.System.IO.Abstractions" Version="19.2.9" />
 		<PackageReference Include="Validation" Version="2.5.51" PrivateAssets="build;compile" />
 		<PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
 		<PackageReference Include="System.Text.Json" Version="7.0.2" />
-	</ItemGroup>
-
-	<ItemGroup>
-	  <ProjectReference Include="..\..\CommonUtilities\CommonUtilities.Windows\CommonUtilities.Windows.csproj" />
 	</ItemGroup>
 
 </Project>
