--- a/src/AnakinApps/ApplicationManifestCreator/Properties/launchSettings.json
+++ b/src/AnakinApps/ApplicationManifestCreator/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "ApplicationManifestCreator": {
       "commandName": "Project",
-      "commandLineArgs": "-a \"C:/Test/Foc Launcher.exe\" --appDataFiles C:/Test/AnakinRaW.ExternalUpdater.exe --origin https://google.de/"
+      "commandLineArgs": "-a \"C:/Test/Foc Launcher.exe\" --appDataFiles C:/Test/AnakinRaW.ExternalUpdater.exe --origin https://republicatwar.com/downloads/FocLauncher/ -o C:/Test"
     }
   }
 }
