--- a/src/AnakinApps/ApplicationBase/ApplicationBase.csproj
+++ b/src/AnakinApps/ApplicationBase/ApplicationBase.csproj
@@ -5,7 +5,7 @@
 	</PropertyGroup>
 
 	<PropertyGroup>
-		<TargetFrameworks>net48;net6.0-windows</TargetFrameworks>
+		<TargetFrameworks>netstandard2.0;net6.0</TargetFrameworks>
 		<Nullable>enable</Nullable>
 		<RootNamespace>AnakinRaW.ApplicationBase</RootNamespace>
 		<AssemblyName>AnakinRaW.ApplicationBase</AssemblyName>
@@ -23,13 +23,7 @@
 		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.0" />
 		<PackageReference Include="Flurl" Version="3.0.7" />
 		<PackageReference Include="CommandLineParser" Version="2.9.1" />
-		<PackageReference Include="AnakinRaW.CommonUtilities.FileSystem.Windows" Version="6.0.1" />
-		<PackageReference Include="AnakinRaW.CommonUtilities.Registry.Windows" Version="6.0.1" />
 		<PackageReference Include="Semver" Version="2.3.0" />
-
-	</ItemGroup>
-
-	<ItemGroup Condition="$(TargetFramework) == 'net48'">
 		<PackageReference Include="Vanara.PInvoke.Kernel32" Version="3.4.14" />
 	</ItemGroup>
 
