--- a/src/Updater/AppUpdaterFramework/AppUpdaterFramework.csproj
+++ b/src/Updater/AppUpdaterFramework/AppUpdaterFramework.csproj
@@ -30,6 +30,7 @@
 
 	<ItemGroup>
 		<ProjectReference Include="..\AppUpdaterFramework.Core\AppUpdaterFramework.Core.csproj" />
+		<ProjectReference Include="..\ExternalUpdater.CLI\ExternalUpdater.CLI.csproj" />
 	</ItemGroup>
 
 	<PropertyGroup>
