--- a/src/AnakinApps/ApplicationBase.CLI/ApplicationBase.CLI.csproj
+++ b/src/AnakinApps/ApplicationBase.CLI/ApplicationBase.CLI.csproj
@@ -18,6 +18,13 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="Microsoft.Extensions.Logging" Version="7.0.0" />
+		<PackageReference Include="Microsoft.Extensions.Logging.Console" Version="7.0.0" />
+		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="7.0.0" />
+		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.0" />
+	</ItemGroup>
+
+	<ItemGroup>
 		<ProjectReference Include="..\..\Updater\AppUpdaterFramework\AppUpdaterFramework.csproj" />
 		<ProjectReference Include="..\ApplicationBase\ApplicationBase.csproj" />
 	</ItemGroup>
