--- a/src/AnakinApps/ApplicationBase.CLI/ApplicationBase.CLI.csproj
+++ b/src/AnakinApps/ApplicationBase.CLI/ApplicationBase.CLI.csproj
@@ -22,6 +22,7 @@
 		<PackageReference Include="Microsoft.Extensions.Logging.Console" Version="7.0.0" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="7.0.0" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.0" />
+		<PackageReference Include="Serilog.Extensions.Logging.File" Version="3.0.0" />
 	</ItemGroup>
 
 	<ItemGroup>
