--- a/src/Updater/AppUpdaterFramework.Core/AppUpdaterFramework.Core.csproj
+++ b/src/Updater/AppUpdaterFramework.Core/AppUpdaterFramework.Core.csproj
@@ -12,9 +12,13 @@
 
 	<ItemGroup>
 		<PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
-		<PackageReference Include="AnakinRaW.CommonUtilities" Version="7.0.1" />
+		<PackageReference Include="AnakinRaW.CommonUtilities" Version="8.0.1" />
 		<PackageReference Include="Semver" Version="2.3.0" />
 		<PackageReference Include="Mono.Cecil" Version="0.11.5" PrivateAssets="build;compile" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <PackageReference Update="Nerdbank.GitVersioning" Version="3.6.128" />
 	</ItemGroup>
 
 </Project>
