--- a/src/Updater/AppUpdaterFramework.Manifest/AppUpdaterFramework.Manifest.csproj
+++ b/src/Updater/AppUpdaterFramework.Manifest/AppUpdaterFramework.Manifest.csproj
@@ -18,4 +18,8 @@
 	  <ProjectReference Include="..\AppUpdaterFramework\AppUpdaterFramework.csproj" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <PackageReference Update="Nerdbank.GitVersioning" Version="3.6.128" />
+	</ItemGroup>
+
 </Project>
