--- a/src/Updater/AppUpdaterFramework/AppUpdaterFramework.csproj
+++ b/src/Updater/AppUpdaterFramework/AppUpdaterFramework.csproj
@@ -15,11 +15,11 @@
 		<PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.0" />
 		<PackageReference Include="Semver" Version="2.3.0" />
-		<PackageReference Include="AnakinRaW.CommonUtilities" Version="7.0.1" />
-		<PackageReference Include="AnakinRaW.CommonUtilities.Registry" Version="7.0.1" />
-		<PackageReference Include="AnakinRaW.CommonUtilities.DownloadManager" Version="7.0.1" />
-		<PackageReference Include="AnakinRaW.CommonUtilities.FileSystem" Version="7.0.1" />
-		<PackageReference Include="AnakinRaW.CommonUtilities.SimplePipeline" Version="7.0.1" />
+		<PackageReference Include="AnakinRaW.CommonUtilities" Version="8.0.1" />
+		<PackageReference Include="AnakinRaW.CommonUtilities.Registry" Version="8.0.1" />
+		<PackageReference Include="AnakinRaW.CommonUtilities.DownloadManager" Version="8.0.1" />
+		<PackageReference Include="AnakinRaW.CommonUtilities.FileSystem" Version="8.0.1" />
+		<PackageReference Include="AnakinRaW.CommonUtilities.SimplePipeline" Version="8.0.1" />
 		<PackageReference Include="Validation" Version="2.5.51" PrivateAssets="build;compile" />
 		<PackageReference Include="Vanara.PInvoke.RstrtMgr" Version="3.4.14" PrivateAssets="build;compile" />
 	</ItemGroup>
@@ -31,6 +31,10 @@
 	<ItemGroup>
 		<ProjectReference Include="..\AppUpdaterFramework.Core\AppUpdaterFramework.Core.csproj" />
 		<ProjectReference Include="..\ExternalUpdater.CLI\ExternalUpdater.CLI.csproj" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <PackageReference Update="Nerdbank.GitVersioning" Version="3.6.128" />
 	</ItemGroup>
 
 	<PropertyGroup>
