--- a/src/Updater/AppUpdaterFramework.WPF/AppUpdaterFramework.WPF.csproj
+++ b/src/Updater/AppUpdaterFramework.WPF/AppUpdaterFramework.WPF.csproj
@@ -24,6 +24,10 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <PackageReference Update="Nerdbank.GitVersioning" Version="3.6.128" />
+	</ItemGroup>
+
+	<ItemGroup>
 	  <Page Update="Themes\DarkTheme.xaml">
 	    <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
 	  </Page>
