added build pipeline dummy

--- a/src/Updater/AppUpdaterFramework/AppUpdaterFramework.csproj
+++ b/src/Updater/AppUpdaterFramework/AppUpdaterFramework.csproj
@@ -15,17 +15,17 @@
 		<PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.0" />
 		<PackageReference Include="Semver" Version="2.3.0" />
-		<PackageReference Include="AnakinRaW.CommonUtilities" Version="8.0.1" />
-		<PackageReference Include="AnakinRaW.CommonUtilities.Registry" Version="8.0.1" />
-		<PackageReference Include="AnakinRaW.CommonUtilities.DownloadManager" Version="8.0.1" />
-		<PackageReference Include="AnakinRaW.CommonUtilities.FileSystem" Version="8.0.1" />
-		<PackageReference Include="AnakinRaW.CommonUtilities.SimplePipeline" Version="8.0.1" />
+		<PackageReference Include="AnakinRaW.CommonUtilities" Version="8.1.1" />
+		<PackageReference Include="AnakinRaW.CommonUtilities.Registry" Version="8.1.1" />
+		<PackageReference Include="AnakinRaW.CommonUtilities.DownloadManager" Version="8.1.1" />
+		<PackageReference Include="AnakinRaW.CommonUtilities.FileSystem" Version="8.1.1" />
+		<PackageReference Include="AnakinRaW.CommonUtilities.SimplePipeline" Version="8.1.1" />
 		<PackageReference Include="Validation" Version="2.5.51" PrivateAssets="build;compile" />
-		<PackageReference Include="Vanara.PInvoke.RstrtMgr" Version="3.4.14" PrivateAssets="build;compile" />
+		<PackageReference Include="Vanara.PInvoke.RstrtMgr" Version="3.4.15" PrivateAssets="build;compile" />
 	</ItemGroup>
 
 	<ItemGroup Condition=" '$(Configuration)' == 'Debug' ">
-		<PackageReference Include="envdte" Version="17.5.33428.366" />
+		<PackageReference Include="envdte" Version="17.6.36389" PrivateAssets="build;compile" />
 	</ItemGroup>
 
 	<ItemGroup>
