--- a/src/Updater/AppUpdaterFramework.Core/AppUpdaterFramework.Core.csproj
+++ b/src/Updater/AppUpdaterFramework.Core/AppUpdaterFramework.Core.csproj
@@ -16,5 +16,9 @@
 		<PackageReference Include="Semver" Version="2.3.0" />
 		<PackageReference Include="Mono.Cecil" Version="0.11.5" PrivateAssets="build;compile" />
 	</ItemGroup>
+
+	<ItemGroup>
+	  <PackageReference Update="Nerdbank.GitVersioning" Version="3.6.133" />
+	</ItemGroup>
 	
 </Project>
