--- a/src/Updater/AppUpdaterFramework.WPF/AppUpdaterFramework.WPF.csproj
+++ b/src/Updater/AppUpdaterFramework.WPF/AppUpdaterFramework.WPF.csproj
@@ -12,7 +12,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-	  <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.0" />
+	  <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.1" />
 	  <PackageReference Include="Validation" Version="2.5.51" PrivateAssets="build;compile" />
 	</ItemGroup>
 
@@ -21,6 +21,10 @@
 	  <ProjectReference Include="..\..\CommonUtilities\CommonUtilities.WPF.ApplicationFramework\CommonUtilities.WPF.ApplicationFramework.csproj" />
 	  <ProjectReference Include="..\AppUpdaterFramework\AppUpdaterFramework.csproj" />
 	  <ProjectReference Include="..\ExternalUpdater.CLI\ExternalUpdater.CLI.csproj" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <PackageReference Update="Nerdbank.GitVersioning" Version="3.6.133" />
 	</ItemGroup>
 
 	<ItemGroup>
