--- a/src/Updater/ExternalUpdater.CLI/ExternalUpdater.CLI.csproj
+++ b/src/Updater/ExternalUpdater.CLI/ExternalUpdater.CLI.csproj
@@ -15,10 +15,14 @@
 		<PackageReference Include="AnakinRaW.CommonUtilities" Version="8.1.1" />
 		<PackageReference Include="CommandLineParser" Version="2.9.1" />
 		<PackageReference Include="Semver" Version="2.3.0" />
-		<PackageReference Include="TestableIO.System.IO.Abstractions" Version="19.2.29" />
+		<PackageReference Include="TestableIO.System.IO.Abstractions" Version="19.2.69" />
 		<PackageReference Include="Validation" Version="2.5.51" PrivateAssets="build;compile" />
 		<PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
-		<PackageReference Include="System.Text.Json" Version="7.0.2" />
+		<PackageReference Include="System.Text.Json" Version="7.0.3" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <PackageReference Update="Nerdbank.GitVersioning" Version="3.6.133" />
 	</ItemGroup>
 
 </Project>
