--- a/src/CommonUtilities/CommonUtilities.WPF.Controls/CommonUtilities.WPF.Controls.csproj
+++ b/src/CommonUtilities/CommonUtilities.WPF.Controls/CommonUtilities.WPF.Controls.csproj
@@ -15,6 +15,7 @@
 
 	<PropertyGroup>
 		<SatelliteResourceLanguages>en</SatelliteResourceLanguages>
+		<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
 	</PropertyGroup>
 
 	<ItemGroup>
