--- a/src/AnakinApps/ApplicationBase/ApplicationBase.csproj
+++ b/src/AnakinApps/ApplicationBase/ApplicationBase.csproj
@@ -26,6 +26,14 @@
 		<PackageReference Include="CommandLineParser" Version="2.9.1" />
 		<PackageReference Include="Semver" Version="2.3.0" />
 		<PackageReference Include="Vanara.PInvoke.Kernel32" Version="3.4.16" />
+		<PackageReference Include="IsExternalInit" Version="1.0.3">
+			<PrivateAssets>all</PrivateAssets>
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
+		<PackageReference Include="Required" Version="1.0.0">
+			<PrivateAssets>all</PrivateAssets>
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
 	</ItemGroup>
 
 	<ItemGroup>
