--- a/src/AnakinApps/ApplicationManifestCreator/ApplicationManifestCreator.csproj
+++ b/src/AnakinApps/ApplicationManifestCreator/ApplicationManifestCreator.csproj
@@ -21,6 +21,14 @@
 		<PackageReference Include="TestableIO.System.IO.Abstractions.Wrappers" Version="19.2.69" />
 		<PackageReference Include="Validation" Version="2.5.51" />
 		<PackageReference Include="Flurl" Version="3.0.7" />
+		<PackageReference Include="IsExternalInit" Version="1.0.3">
+			<PrivateAssets>all</PrivateAssets>
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
+		<PackageReference Include="Required" Version="1.0.0">
+			<PrivateAssets>all</PrivateAssets>
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
 	</ItemGroup>
 
 	<ItemGroup>
