--- a/src/Updater/AppUpdaterFramework.Core/AppUpdaterFramework.Core.csproj
+++ b/src/Updater/AppUpdaterFramework.Core/AppUpdaterFramework.Core.csproj
@@ -13,6 +13,14 @@
 	<ItemGroup>
 		<PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
 		<PackageReference Include="AnakinRaW.CommonUtilities" Version="8.1.1" />
+		<PackageReference Include="IsExternalInit" Version="1.0.3">
+			<PrivateAssets>all</PrivateAssets>
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
+		<PackageReference Include="Required" Version="1.0.0">
+		  <PrivateAssets>all</PrivateAssets>
+		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
 		<PackageReference Include="Semver" Version="2.3.0" />
 		<PackageReference Include="Mono.Cecil" Version="0.11.5" PrivateAssets="build;compile" />
 	</ItemGroup>
