--- a/src/Updater/ExternalUpdater/ExternalUpdater.csproj
+++ b/src/Updater/ExternalUpdater/ExternalUpdater.csproj
@@ -23,11 +23,10 @@
 		<PackageReference Include="Microsoft.Extensions.Logging.Console" Version="8.0.0" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="8.0.0" />
 		<PackageReference Include="Serilog.Extensions.Logging.File" Version="3.0.0" />
-		<PackageReference Include="AnakinRaW.CommonUtilities.FileSystem.Windows" Version="8.1.1" />
-		<PackageReference Include="AnakinRaW.CommonUtilities" Version="8.1.1" />
 	</ItemGroup>
 
 	<ItemGroup>
+		<ProjectReference Include="..\..\..\..\CommonUtilities\src\CommonUtilities.FileSystem\src\Commonutilities.FileSystem.csproj" />
 		<ProjectReference Include="..\AppUpdaterFramework.Core\AppUpdaterFramework.Core.csproj" />
 		<ProjectReference Include="..\ExternalUpdater.CLI\ExternalUpdater.CLI.csproj" />
 	</ItemGroup>
