--- a/src/Updater/AppUpdaterFramework.Core/AppUpdaterFramework.Core.csproj
+++ b/src/Updater/AppUpdaterFramework.Core/AppUpdaterFramework.Core.csproj
@@ -12,7 +12,6 @@
 
 	<ItemGroup>
 		<PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.0" />
-		<PackageReference Include="AnakinRaW.CommonUtilities" Version="8.1.1" />
 		<PackageReference Include="IsExternalInit" Version="1.0.3">
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -23,6 +22,10 @@
 		</PackageReference>
 		<PackageReference Include="Semver" Version="2.3.0" />
 		<PackageReference Include="Mono.Cecil" Version="0.11.5" PrivateAssets="build;compile" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <ProjectReference Include="..\..\..\..\CommonUtilities\src\CommonUtilities\src\CommonUtilities.csproj" />
 	</ItemGroup>
 	
 </Project>
