--- a/src/Updater/ExternalUpdater.CLI/ExternalUpdater.CLI.csproj
+++ b/src/Updater/ExternalUpdater.CLI/ExternalUpdater.CLI.csproj
@@ -11,8 +11,6 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="AnakinRaW.CommonUtilities.FileSystem" Version="8.1.1" />
-		<PackageReference Include="AnakinRaW.CommonUtilities" Version="8.1.1" />
 		<PackageReference Include="CommandLineParser" Version="2.9.1" />
 		<PackageReference Include="Semver" Version="2.3.0" />
 		<PackageReference Include="TestableIO.System.IO.Abstractions" Version="20.0.15" />
@@ -27,6 +25,10 @@
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
+	</ItemGroup>
+
+	<ItemGroup>
+	  <ProjectReference Include="..\..\..\..\CommonUtilities\src\CommonUtilities\src\CommonUtilities.csproj" />
 	</ItemGroup>
 
 </Project>
