--- a/src/Updater/AppUpdaterFramework.Core/AppUpdaterFramework.Core.csproj
+++ b/src/Updater/AppUpdaterFramework.Core/AppUpdaterFramework.Core.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
 		<Description>Provides attribues and the means the read assembly information required for the AppUpdaterFramework.</Description>
@@ -11,7 +11,8 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.0" />
+		<PackageReference Include="AnakinRaW.CommonUtilities" Version="10.1.2" />
+		<PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.1" />
 		<PackageReference Include="IsExternalInit" Version="1.0.3">
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -22,10 +23,6 @@
 		</PackageReference>
 		<PackageReference Include="Semver" Version="2.3.0" />
 		<PackageReference Include="Mono.Cecil" Version="0.11.5" PrivateAssets="build;compile" />
-	</ItemGroup>
-
-	<ItemGroup>
-	  <ProjectReference Include="..\..\..\..\CommonUtilities\src\CommonUtilities\src\CommonUtilities.csproj" />
 	</ItemGroup>
 	
 </Project>
