--- a/src/Updater/AppUpdaterFramework/AppUpdaterFramework.csproj
+++ b/src/Updater/AppUpdaterFramework/AppUpdaterFramework.csproj
@@ -11,11 +11,14 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="AnakinRaW.CommonUtilities.DownloadManager" Version="10.1.2" />
+		<PackageReference Include="AnakinRaW.CommonUtilities.SimplePipeline" Version="10.1.2" />
+		<PackageReference Include="AnakinRaW.CommonUtilities.FileSystem" Version="10.1.2" />
 		<PackageReference Include="Microsoft.Bcl.HashCode" Version="1.1.1" />
-		<PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.0" />
-		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.0" />
+		<PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.1" />
+		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.1" />
 		<PackageReference Include="Semver" Version="2.3.0" />
-		<PackageReference Include="Vanara.PInvoke.RstrtMgr" Version="3.4.17" PrivateAssets="build;compile" />
+		<PackageReference Include="Vanara.PInvoke.RstrtMgr" Version="4.0.0" PrivateAssets="build;compile" />
 		<PackageReference Include="IsExternalInit" Version="1.0.3">
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -31,9 +34,6 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<ProjectReference Include="..\..\..\..\CommonUtilities\src\CommonUtilities.DownloadManager\src\CommonUtilities.DownloadManager.csproj" />
-		<ProjectReference Include="..\..\..\..\CommonUtilities\src\CommonUtilities.FileSystem\src\Commonutilities.FileSystem.csproj" />
-		<ProjectReference Include="..\..\..\..\CommonUtilities\src\CommonUtilities.SimplePipeline\src\CommonUtilities.SimplePipeline.csproj" />
 		<ProjectReference Include="..\AppUpdaterFramework.Core\AppUpdaterFramework.Core.csproj" />
 		<ProjectReference Include="..\ExternalUpdater.CLI\ExternalUpdater.CLI.csproj" />
 	</ItemGroup>
