start update deps

--- a/src/Updater/AppUpdaterFramework.Manifest/AppUpdaterFramework.Manifest.csproj
+++ b/src/Updater/AppUpdaterFramework.Manifest/AppUpdaterFramework.Manifest.csproj
@@ -11,16 +11,20 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="AnakinRaW.CommonUtilities" Version="12.0.25-beta" />
+		<PackageReference Include="AnakinRaW.CommonUtilities" Version="12.0.91" />
 		<PackageReference Include="IsExternalInit" Version="1.0.3">
 		  <PrivateAssets>all</PrivateAssets>
 		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
-		<PackageReference Include="System.Text.Json" Version="8.0.4" />
+		<PackageReference Include="System.Text.Json" Version="9.0.1" />
 	</ItemGroup>
 
 	<ItemGroup>
 	  <ProjectReference Include="..\AppUpdaterFramework\AppUpdaterFramework.csproj" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <PackageReference Update="Nerdbank.GitVersioning" Version="3.7.115" />
 	</ItemGroup>
 
 </Project>
