--- a/src/CommonUtilities/CommonUtilities.WPF.Core/CommonUtilities.WPF.Core.csproj
+++ b/src/CommonUtilities/CommonUtilities.WPF.Core/CommonUtilities.WPF.Core.csproj
@@ -18,12 +18,12 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="AnakinRaW.CommonUtilities" Version="12.0.2-beta" />
-		<PackageReference Include="System.Collections.Immutable" Version="8.0.0" PrivateAssets="all" />
-		<PackageReference Include="Vanara.PInvoke.Gdi32" Version="4.0.0" PrivateAssets="all" />
-		<PackageReference Include="Vanara.PInvoke.SHCore" Version="4.0.0" PrivateAssets="all" />
-		<PackageReference Include="Vanara.PInvoke.Shell32" Version="4.0.0" PrivateAssets="all" />
-		<PackageReference Include="Vanara.PInvoke.User32" Version="4.0.0" PrivateAssets="all" />
+		<PackageReference Include="AnakinRaW.CommonUtilities" Version="12.0.91" />
+		<PackageReference Include="System.Collections.Immutable" Version="9.0.1" PrivateAssets="all" />
+		<PackageReference Include="Vanara.PInvoke.Gdi32" Version="4.0.4" PrivateAssets="all" />
+		<PackageReference Include="Vanara.PInvoke.SHCore" Version="4.0.4" PrivateAssets="all" />
+		<PackageReference Include="Vanara.PInvoke.Shell32" Version="4.0.4" PrivateAssets="all" />
+		<PackageReference Include="Vanara.PInvoke.User32" Version="4.0.4" PrivateAssets="all" />
 	</ItemGroup>
 	
 </Project>
