--- a/src/Updater/AppUpdaterFramework.Core/AppUpdaterFramework.Core.csproj
+++ b/src/Updater/AppUpdaterFramework.Core/AppUpdaterFramework.Core.csproj
@@ -11,8 +11,8 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="AnakinRaW.CommonUtilities" Version="12.0.25-beta" />
-		<PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.1" />
+		<PackageReference Include="AnakinRaW.CommonUtilities" Version="12.0.91" />
+		<PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.1" />
 		<PackageReference Include="IsExternalInit" Version="1.0.3">
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -21,8 +21,12 @@
 		  <PrivateAssets>all</PrivateAssets>
 		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
-		<PackageReference Include="Semver" Version="2.3.0" />
+		<PackageReference Include="Semver" Version="3.0.0" />
 		<PackageReference Include="Mono.Cecil" Version="0.11.6" PrivateAssets="build;compile" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <PackageReference Update="Nerdbank.GitVersioning" Version="3.7.115" />
 	</ItemGroup>
 	
 </Project>
