--- a/src/Updater/Directory.Build.props
+++ b/src/Updater/Directory.Build.props
@@ -1,23 +1,11 @@
 <Project>
 
+	<Import Project="../../Directory.Build.props" />
+
 	<PropertyGroup>
-		<Copyright>Copyright © AnakinRaW 2019-2023</Copyright>
-		<Authors>AnakinRaW</Authors>
-		<Company>Republic at War Modding Team</Company>
 		<Product>Application Update Framework</Product>
 		<PackageTags>updating, selfupdate, dotent, wpf</PackageTags>
-		<PackageLicenseExpression>MIT</PackageLicenseExpression>
-		<PublishRepositoryUrl>true</PublishRepositoryUrl>
 	</PropertyGroup>
-
-	<PropertyGroup>
-		<LangVersion>latest</LangVersion>
-		<ImplicitUsings>disable</ImplicitUsings>
-		<Nullable>enable</Nullable>
-		<EnableNETAnalyzers>True</EnableNETAnalyzers>
-		<AnalysisLevel>latest</AnalysisLevel>
-	</PropertyGroup>
-
 
 	<ItemGroup>
 		<PackageReference Include="Nerdbank.GitVersioning" Condition="!Exists('packages.config')">
