--- a/src/Updater/ExternalUpdater.App/ExternalUpdater.App.csproj
+++ b/src/Updater/ExternalUpdater.App/ExternalUpdater.App.csproj
@@ -34,7 +34,7 @@
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</ProjectReference>
-		<ProjectReference Include="..\ExternalUpdater.CLI\ExternalUpdater.CLI.csproj">
+		<ProjectReference Include="..\ExternalUpdater.Core\ExternalUpdater.Core.csproj">
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</ProjectReference>
